stackvpc.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: this is create vpc with subnets

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
       CidrBlock: 10.0.0.0/24
       EnableDnsHostnames: true
       EnableDnsSupport: true
       InstanceTenancy: default
       Tags: 
          - Key: Name
            Value: Test VPC

  InternetGetWay:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags: 
       - Key: Name
         Value: Test IGW

  InternetGetWayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGetWay
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/28
      AvailabilityZone: us-east-1a
      Tags:
        - Key: Name
          Value: Public Subnet 1

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.16/28
      AvailabilityZone: us-east-1b
      Tags:
        - Key: Name
          Value: Public Subnet 2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: VPC

  Subnet1Association:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet1
      RouteTableId: !Ref PublicRouteTable

  Subnet2Association:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable
      
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
       RouteTableId:
         Ref: PublicRouteTable
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: InternetGetWay

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn: VPC
    Properties:
      GroupDescription: SG to test ping
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 443
        ToPort: 443
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 81
        ToPort: 81
        CidrIp: 0.0.0.0/0  
      Tags:
        - Key: Name
          Value: Security Group

Outputs:
  VPCId:
    Description: VPC ID
    Value: !Ref VPC
    Export:
      Name: "VPCId"
  
  Subnet1:
    Description: Subnet A ID
    Value: !Ref PublicSubnet1
    Export:
      Name: "Subnet1"

  Subnet2:
    Description: Subnet B ID
    Value: !Ref PublicSubnet2
    Export:
      Name: "Subnet2"
  
  SecurityGroupId:
    Description: SG Id
    Value: !Ref SecurityGroup
    Export:
      Name: "SGId"
